--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <p class="card-text">Gibson製 ES-335 (1965)</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openImage(/img/gibson.jpeg')">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openImage('/img/gibson.jpeg')">View</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary" onclick="showPopup('popup5')">detail </button>
                     <!-- ポップアップコンテンツ -->
                     <div id="popup5" class="popup">
@@ -178,7 +178,7 @@
               <p class="card-text">KORG製 MONOLOGUE-BL</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openImage(/img/korg.jpeg')">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openImage('/img/korg.jpeg')">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary" onclick="showPopup('popup7')">detail </button>
                   <!-- ポップアップコンテンツ -->
                   <div id="popup7" class="popup">
